# researchagent

./: DEMO.md  Dockerfile  LEARNING_GUIDE.md  README.md  docker-compose.yml  main.py  pyproject.toml  webui.py
.researchagent/memory/__manifest/_transactions/: 0-125a2fc2-1543-4af6-984e-4ed01307bdd9.txn
.researchagent/memory/long_term_memory.lance/_transactions/: 0-f20f5d26-1071-4679-b4e7-3d7518da93d0.txn  1-24831a7b-0d60-4524-9a88-6ed3963fe7bb.txn  2-c0818c02-2b07-4a58-8006-65c081e828bb.txn  3-415be6ae-f9fc-4400-bb2a-482ee8075e8e.txn  4-9b5b4294-6f44-4f66-829b-8b251ecfca9c.txn  5-c3638742-791f-4ffd-9d28-fc6b8fc400e7.txn  (+1 more)
benchmarks/: ablation.py  compare_langchain.py  e2e_bench.py
demos/: demo_calculate.py  demo_file_ops.py  demo_research.py
src/researchagent/: __init__.py  __main__.py
src/researchagent/cli/: __init__.py  app.py
src/researchagent/core/: __init__.py  llm_factory.py  logging_config.py  retry.py  state.py  tracker.py
src/researchagent/graph/: __init__.py  nodes.py  state.py  workflow.py
src/researchagent/memory/: __init__.py  long_term.py  manager.py  short_term.py
src/researchagent/prompts/: __init__.py  agent.py
src/researchagent/providers/: __init__.py  openai_provider.py
src/researchagent/research/: __init__.py
src/researchagent/tools/: __init__.py  arxiv_tool.py  bash_tool.py  calculator_tool.py  registry.py  web_search_tool.py
tests/: test_bash_tool.py  test_calculator.py  test_graph.py  test_integration.py  test_llm.py  test_long_term.py  test_manager.py  test_registry.py  test_short_term.py  test_web_search.py
(+16 files in other folders)
