[project]
name = "researchagent"
version = "0.1.0"
description = "ResearchAgent: LLM-powered agent workflow built with LangGraph."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.0",
    "langchain-community>=0.4.0",
    "langchain-huggingface>=0.2.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.1.0",
    "lancedb>=0.18.0",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=4.0.0",
    "simpleeval>=1.0.0",
    "tavily-python>=0.7.0",
    "typer>=0.16.0",
    "rich>=13.0.0",
    "gradio>=5.0.0",
    "arxiv>=2.2.0",
    "semanticscholar>=0.8.0",
]

[project.scripts]
researchagent = "researchagent.cli.app:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
